WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118241
[Curl] WebDownload init method is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=118241
Summary
[Curl] WebDownload init method is not implemented.
peavo
Reported
2013-07-01 06:35:13 PDT
The WebDownload::init() method called when a normal load is changed to a download because of a decision by the policy delegate, is not implemented for Curl.
Attachments
Patch
(1.59 KB, patch)
2013-07-01 06:43 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-07-01 06:43:51 PDT
Created
attachment 205808
[details]
Patch
Brent Fulgham
Comment 2
2013-07-01 09:23:27 PDT
Comment on
attachment 205808
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-07-01 09:48:24 PDT
Comment on
attachment 205808
[details]
Patch Clearing flags on attachment: 205808 Committed
r152229
: <
http://trac.webkit.org/changeset/152229
>
WebKit Commit Bot
Comment 4
2013-07-01 09:48:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug