[Curl] WebDownload init method is not implemented. https://bugs.webkit.org/show_bug.cgi?id=118241

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-07-01
Reviewed by Brent Fulgham.

The WebDownload::init() method called when a normal load is changed to a download
because of a decision by the policy delegate, is not implemented for Curl.

* WebDownloadCurl.cpp:
(WebDownload::init): Implement init() method.

Canonical link: https://commits.webkit.org/136282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152229 268f45cc-cd09-0410-ab3c-d52691b4dbfc